--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,3 +2,6 @@
 commons-lang = "org.apache.commons:commons-lang3:3.12.0"
 slf4j-api = "org.slf4j:slf4j-api:1.7.36"
 slf4j-simple = "org.slf4j:slf4j-simple:1.7.36"
+
+[plugins]
+dependency-analysis = "com.autonomousapps.dependency-analysis:1.17.0"
