configure test task

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@
 # This caches the outputs of our tasks. Next time the task is run with the same input - take output from cache.
 org.gradle.caching = true
 
+# Allow gradle to execute tasks from different projects in parallel.
+org.gradle.parallel = true
